--- a/训练/2020-02-13 Petrozavodsk Winter-2017. Asia-Tsukuba 2016/题解.md
+++ b/训练/2020-02-13 Petrozavodsk Winter-2017. Asia-Tsukuba 2016/题解.md
@@ -1,4 +1,4 @@
-# A. Rearranging a Sequence
+﻿# A. Rearranging a Sequence
 简单题
 # B. Quality of Check Digits
 简单题
@@ -8,6 +8,8 @@
 简单题，暴力+哈希
 # E. Infallibly Crack Perplexing Cryptarithm
 一共只有8个字符，由于字母和字符应该一一对应，暴力枚举，得到表达式，直接写paser计算即可。
+# F. Three Kingdoms of Bourdelot
+本题的主要难度在于读题，实际上每份档案里面每行描述了x和y是否存在祖先和子孙关系，一份档案描述的关系要么全都存在要么全都不存在。想知道对于给定的p，q是否有可能p是q的祖先。我们把关系用有向边表示，如果图中没有环，这样的关系就是合法的。首先对于p，q，如果没有任何一份档案直接（必须是直接）描述pq的关系，那么就可以认为所有档案都是表示否定的，这样一定成立。如果有描述pq关系的档案，那这份档案必然为肯定的，所有这份档案可能存在的关系必须成立。注意到不同的人不超过300个，暴力维护两个人之间是否有祖先关系，每次有一个关系发生变化，就检查是否有新的档案变成必须是肯定的。直到所有肯定的档案确定下来，剩下的都是否定的，检查是否有环即可。
 # G.  Placing Medals on Binary Tree
 实际上就是求$\sum \frac{1}{2^x}$是否大于1，动态开点的线段树维护二进制下的每一位，每次加入一个数就是在某一位上加1，如果变成了2就进位。
 # H. Animal Companion in Maze
