--- a/训练/2020-02-20 2019-2020 ICPC Asia Hong Kong Regional Contest/题解.md
+++ b/训练/2020-02-20 2019-2020 ICPC Asia Hong Kong Regional Contest/题解.md
@@ -1,2 +1,2 @@
-# G. Game Design
-ºÜ¼òµ¥µÄ¹¹Ôì¡£ÔìÒ»¸öÈı²æµÄ³¤Á´£¬ÕâÑùK=a*b+c¡£Ö»Òª¿ØÖÆa+b+c<1e5¾ÍĞĞÁË¡£
+ï»¿# G. Game Design
+å¾ˆç®€å•çš„æ„é€ ã€‚é€ ä¸€ä¸ªä¸‰å‰çš„é•¿é“¾ï¼Œè¿™æ ·K=a*b+cã€‚åªè¦æ§åˆ¶a+b+c<1e5å°±è¡Œäº†ã€‚
